--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
 
 <!-- This is a comment, it is ignored by the compiler/interpreter -->
 
-## Project Updates: 
+<!-- ## Project Updates: 
 
 * [Week 1](./week-1/index.html)
-* [Week 2](./week-2/index.html)
+* [Week 2](./week-2/index.html) -->
+
+## Students 
+
+* [Haeri Kim](https://haerikim24.github.io/rapid-prototyping/)
+* [Sara Zangi](https://szangi.github.io/intro-to-design/)
+* [Emilio Ahuactzin-Garcia](https://joancorp.github.io/rapid-prototyping/)
+*[David Xiong](https://dtxiong.github.io/rapid-prototyping/)
+*[Jaron Cota](https://jaronfcota.github.io/rapid-prototyping/)
+*[Gyalpo Dongo](https://gyalpodongo.github.io/Gyalpo-Portfolio/)
+*[Maximiliano Ramirez](https://mramirez872.github.io/)
+*[Lucas Marden](https://lmarden.github.io/rapid-prototyping/)
 
 
 
