--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 * [Gyalpo Dongo](https://gyalpodongo.github.io/Gyalpo-Portfolio/)
 * [Maximiliano Ramirez](https://mramirez872.github.io/)
 * [Lucas Marden](https://lmarden.github.io/rapid-prototyping/)
-
+* [Calvin Cummings](https://calvinjc01.github.io/rapid-prototyping/)
 
 
 </xmp>
