--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 * [Maximiliano Ramirez](https://mramirez872.github.io/)
 * [Lucas Marden](https://lmarden.github.io/rapid-prototyping/)
 * [Calvin Cummings](https://calvinjc01.github.io/rapid-prototyping/)
+* [Louise Anderfaas](https://landerfaas.github.io/rapid-prototyping/index.html)
+* [Joseph Jerkins](https://deionizedplasma.github.io/22.03/)
 
 
 </xmp>
