--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 * [Calvin Cummings](https://calvinjc01.github.io/rapid-prototyping/)
 * [Louise Anderfaas](https://landerfaas.github.io/rapid-prototyping/index.html)
 * [Joseph Jerkins](https://deionizedplasma.github.io/22.03/)
+* [Pablo Arroyo](https://pabloarroyo2002.github.io/Rapid-Prototyping_22.03/)
+* [Josh Torres](https://torresjo.github.io/)
 
 
 </xmp>
