--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 ## Students 
 
 * [Haeri Kim](https://haerikim24.github.io/rapid-prototyping/)
+* [Haeri Kim 2](https://haerikim24.github.io/2203rapid-prototyping/]
 * [Sara Zangi](https://szangi.github.io/intro-to-design/)
 * [Emilio Ahuactzin-Garcia](https://joancorp.github.io/rapid-prototyping/)
 * [David Xiong](https://dtxiong.github.io/rapid-prototyping/)
@@ -37,6 +38,9 @@
 * [Joseph Jerkins](https://deionizedplasma.github.io/22.03/)
 * [Pablo Arroyo](https://pabloarroyo2002.github.io/Rapid-Prototyping_22.03/)
 * [Josh Torres](https://torresjo.github.io/)
+* [Lucy Nester](http://snarcanine.github.io/22.03/index.html)
+* [Jessica Wang](https://wang-jessica.github.io/rapid-prototyping/index.html)
+* [Armando Martinez](https://aamartz.github.io/prototyping-portfolio/)
 
 
 </xmp>
