--- a/index.html
+++ b/index.html
@@ -15,18 +15,12 @@
 	</menu> -->
 </topbar>
 
-<!-- This is a comment, it is ignored by the compiler/interpreter -->
-
-<!-- ## Project Updates: 
-
-* [Week 1](./week-1/index.html)
-* [Week 2](./week-2/index.html) -->
 
 ## Students 
 
 * [Haeri Kim](https://haerikim24.github.io/rapid-prototyping/)
-* [Haeri Kim 2](https://haerikim24.github.io/2203rapid-prototyping/]
-* [Sara Zangi](https://szangi.github.io/intro-to-design/)
+* [Haeri Kim 2](https://haerikim24.github.io/2203rapid-prototyping/)
+* [Zangi](https://szangi.github.io/intro-to-design/)
 * [Emilio Ahuactzin-Garcia](https://joancorp.github.io/rapid-prototyping/)
 * [David Xiong](https://dtxiong.github.io/rapid-prototyping/)
 * [Jaron Cota](https://jaronfcota.github.io/rapid-prototyping/)
