--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 	</menu> -->
 </topbar>
 
+## Resources
+[Web development resources](./web.html) 
 
 ## Students 
 
-* [Haeri Kim](https://haerikim24.github.io/rapid-prototyping/)
-* [Haeri Kim 2](https://haerikim24.github.io/2203rapid-prototyping/)
+* [Haeri Kim](https://haerikim24.github.io/2203rapid-prototyping/)
 * [Zangi](https://szangi.github.io/intro-to-design/)
 * [Emilio Ahuactzin-Garcia](https://joancorp.github.io/rapid-prototyping/)
 * [David Xiong](https://dtxiong.github.io/rapid-prototyping/)
