--- a/web.html
+++ b/web.html
@@ -22,7 +22,20 @@ Markdown is a text-to-HTML conversion tool for web writers. Markdown allows you 
 
 Markdown is often used in _static site generator_ platforms like Jekyll or Hugo. The downside to these platforms is that you have to install their software, and then use command line tools to locally build (i.e. convert to HTML) your site before you push it to the web. 
 
-This page is created using a library called [https://strapdownjs.com](strapdown.js).  
+This page is created using a library called [https://strapdownjs.com](strapdown.js). 
+
+### Bootstrap 
+
+
+### HTML 
+
+The nice thing about working in Markdown is that it doesn't preclude using HTML elements. I can switch back and forth between MD and HTML as I write my .html file -- the end result will be 100% HTML. 
+
+Some elements aren't handled well by Markdown, like embedding a youtube video using the [iframe](https://www.w3schools.com/tags/tag_iframe.ASP) tag, so we can do things like that with HTML. 
+
+### CSS 
+
+
 
 </xmp>
 
