--- a/web.html
+++ b/web.html
@@ -2,6 +2,11 @@
 <html>
 <title>Nathan's Documentation for 22.03</title>
 
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+
 <xmp theme="journal" style="display:none;">
 
 <topbar style="display:none;">
@@ -10,7 +15,7 @@
 </topbar>
 
 
-## Resources for Web Development
+### Resources for Web Development
 
 Link to MIT resources page 
 
@@ -45,10 +50,29 @@ Learn more about Bootstrap on [w3schools](https://www.w3schools.com/bootstrap5/b
 
 Strapdown is designed to work with Bootstrap layouts. This page is rendered using the "journal" theme, but I can choose from many others (see [bootswatch](https://bootswatch.com/) for examples). All I have to do is change the theme in the `<xmp>` tag: `<xmp theme="journal" style="display:none;">`
 
+Sometimes, we'll want to make small changes to a theme (font size, colors, margins, etc.). We can do that using CSS/SCSS (see below). 
 
-You can easily add a Bootstrap layout to a Strapdown page.  
+You can easily add a Bootstrap layout to a Strapdown page. Below is a minimal example from [w3schools](https://www.w3schools.com/bootstrap5/bootstrap_get_started.php). (Note that inside of the Bootstrap structure, we need to use HTML tags instead of writing MD. This is because the Bootstrap formatting gets applied before Strapdown converts MD to HTML). 
 
-
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Column 1</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 2</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 3</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+  </div>
+</div>
 
 
 ### CSS / SCSS
