--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 
 ## Students 
 
-* [Haeri Kim](https://haerikim24.github.io/2203rapid-prototyping/)
+* [Armando](https://aamartz.github.io/prototyping-portfolio/)
+* [Calvin](https://calvinjc01.github.io/rapid-prototyping/)
+* [David](https://dtxiong.github.io/rapid-prototyping/)
+* [Emilio](https://joancorp.github.io/rapid-prototyping/)
+* [Gyalpo](https://gyalpodongo.github.io/Gyalpo-Portfolio/)
+* [Haeri](https://haerikim24.github.io/2203rapid-prototyping/)
+* [Jaron](https://jaronfcota.github.io/rapid-prototyping/)
+* [Jessica](https://wang-jessica.github.io/rapid-prototyping/index.html)
+* [Joseph](https://deionizedplasma.github.io/22.03/)
+* [Josh](https://torresjo.github.io/)
+* [Louise](https://landerfaas.github.io/rapid-prototyping/index.html)
+* [Lucas](https://lmarden.github.io/rapid-prototyping/)
+* [Lucy](http://snarcanine.github.io/22.03/index.html)
+* [Pablo](https://pabloarroyo2002.github.io/Rapid-Prototyping_22.03/)
 * [Zangi](https://szangi.github.io/intro-to-design/)
-* [Emilio Ahuactzin-Garcia](https://joancorp.github.io/rapid-prototyping/)
-* [David Xiong](https://dtxiong.github.io/rapid-prototyping/)
-* [Jaron Cota](https://jaronfcota.github.io/rapid-prototyping/)
-* [Gyalpo Dongo](https://gyalpodongo.github.io/Gyalpo-Portfolio/)
-* [Lucas Marden](https://lmarden.github.io/rapid-prototyping/)
-* [Calvin Cummings](https://calvinjc01.github.io/rapid-prototyping/)
-* [Louise Anderfaas](https://landerfaas.github.io/rapid-prototyping/index.html)
-* [Joseph Jerkins](https://deionizedplasma.github.io/22.03/)
-* [Pablo Arroyo](https://pabloarroyo2002.github.io/Rapid-Prototyping_22.03/)
-* [Josh Torres](https://torresjo.github.io/)
-* [Lucy Nester](http://snarcanine.github.io/22.03/index.html)
-* [Jessica Wang](https://wang-jessica.github.io/rapid-prototyping/index.html)
-* [Armando Martinez](https://aamartz.github.io/prototyping-portfolio/)
 
 
 </xmp>
