annotated weekly page
added folder with assets for annotated version of the weekly update demo page and updated main index.html with link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </topbar>
 
 ## Resources
-[Web development resources](./web.html) 
+[Web development resources](./web.html)
+[Annotated 'weekly update' demo page](./week-annotate/index.html) 
 
 ## Students 
 
