--- a/week-annotate/index.html
+++ b/week-annotate/index.html
@@ -138,8 +138,6 @@ HTML features that are not available through Markdown can still be accessed by u
 
 For example, resizing images: 
 
-*****
-
 `<img src="./strandbeest.jpg" alt="strandbeest" width="200"/>`
 
 <img src="./strandbeest.jpg" alt="strandbeest" width="200"/>
@@ -148,6 +146,8 @@ For example, resizing images:
 
 <img src="./strandbeest.jpg" alt="strandbeest" width="600"/>
 *****
+
+### Embedding videos
 
 YouTube videos can be embedded by clicking "copy embed code" and pasting an iframe element in the file, like this: 
 
