--- a/week-annotate/index.html
+++ b/week-annotate/index.html
@@ -141,13 +141,14 @@ For example, resizing images:
 `<img src="./strandbeest.jpg" alt="strandbeest" width="200"/>`
 
 <img src="./strandbeest.jpg" alt="strandbeest" width="200"/>
+
 *****
+
 `<img src="./strandbeest.jpg" alt="strandbeest" width="600"/>`
 
 <img src="./strandbeest.jpg" alt="strandbeest" width="600"/>
-*****
 
-### Embedding videos
+##### Embedding videos
 
 YouTube videos can be embedded by clicking "copy embed code" and pasting an iframe element in the file, like this: 
 
