--- a/week-annotate/index.html
+++ b/week-annotate/index.html
@@ -12,7 +12,7 @@
 <!-- This is a comment, it is ignored by the compiler/interpreter -->
 ### Page Title and Navigation:
 
-The code that creates the page title, navigation, and sets the strapdown.js theme (journal) looks like this:
+The code that creates the page title, navigation, and sets the [strapdown.js](https://strapdownjs.com/) theme (journal) looks like this:
 
 <img src="./title-nav.jpg" alt="title & nav code" width="600"/>
 
@@ -99,6 +99,16 @@ or
 `-----`
 
 among a few options.
+
+-----
+
+### Links:
+
+The syntax for a link is:
+
+`[22.03 documentation index page](https://nathanmelenbrink.github.io/rapid-prototyping/index.html)`
+
+[22.03 documentation index page](https://nathanmelenbrink.github.io/rapid-prototyping/index.html)
 
 -----
 
