--- a/skills/index.html
+++ b/skills/index.html
@@ -12,7 +12,9 @@
 <!-- This is a comment, it is ignored by the compiler/interpreter -->
 ### Skills Checklist:
 
-By the end of the subject,
+By the end of the semester we would like you to have a working familiarity with prototyping processes and common tools around the shop, including but not limited to the drill press, band saw, grinders, various hand tools, and possibly even the mill and lathe. We would also like you to have experience with two or three CAD (computer aided design) modeling to fabrication workflows, including laser cutting, waterjet cutting, and 3d printing. You should also have basic experience with measuring, marking, and layout work, an intuition for tolerance in various processes, and to understand the difference between precision and accuracy. 
+
+Acquisition of these skills can be accomplished either through the prototyping working that you do for the class project, or through a short exercise called *making a box three ways,* in which you will produce a small box via the laser cutter, a second small box in sheet metal, and a third that is 3D printed. If you have experience in some or all of these areas, documenting that experience through prototyping for the class project may be the most efficient way to complete this requirement. If you have little or no prior experience, you may be able to complete everything through prototyping, but should also consider proactively taking on the *box three ways* assignment as a means to acquire skills that will help you to make prototypes for the class project more efficiently.
 
 
 
