--- a/web.html
+++ b/web.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<title>Nathan's Documentation for 22.03</title>
+<title>22.03/3.0061[J] - Intro to Design Thinking and Rapid Prototyping</title>
 
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1"> 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -14,10 +14,6 @@
 	<item><a href="../about.html">About</a></item>
 </topbar>
 
-
-### Resources for Web Development
-
-Link to MIT resources page 
 
 ### Markdown 
 
