--- a/skills/index.html
+++ b/skills/index.html
@@ -16,7 +16,19 @@ By the end of the semester we would like you to have a working familiarity with 
 
 Acquisition of these skills can be accomplished either through the prototyping working that you do for the class project, or through a short exercise called *making a box three ways,* in which you will produce a small box via the laser cutter, a second small box in sheet metal, and a third that is 3D printed. If you have experience in some or all of these areas, documenting that experience through prototyping for the class project may be the most efficient way to complete this requirement. If you have little or no prior experience, you may be able to complete everything through prototyping, but should also consider proactively taking on the *box three ways* assignment as a means to acquire skills that will help you to make prototypes for the class project more efficiently.
 
+The deliverable for the skills checklist is a page on the course website showing a photo of the each of the following:
 
+* Layout work including measuring and marking for manual fabrication
+* Use of a hand drill
+* Use of a drill press
+* Use of a bandsaw
+* Screenshots of a CAD model, and photos of the laser cutting process and final product produced with a laser cutter
+* Screenshots of a CAD model, .stl file, 3d printer toolpaths, and a photo of a 3d printed component
+* Sheetmetal workflow
+	* including layout (can be CAD or by hand)
+	* cutting (can be waterjet or manual)
+	* deburring and post-processing
+	* assembly
 
 </xmp>
 
