--- a/skills/index.html
+++ b/skills/index.html
@@ -22,8 +22,15 @@ The deliverable for the skills checklist is a page on the course website showing
 * Use of a hand drill
 * Use of a drill press
 * Use of a bandsaw
-* Screenshots of a CAD model, and photos of the laser cutting process and final product produced with a laser cutter
-* Screenshots of a CAD model, .stl file, 3d printer toolpaths, and a photo of a 3d printed component
+* Laser cutting
+	* Screenshots of a CAD model
+	* photos of the laser cutting process
+	* final product produced with a laser cutter
+* 3D printing
+	* Screenshot of a CAD model
+	* Screenshot of .stl file
+	* Screenshot of 3d printer toolpaths
+	* Photo of a 3d printed component
 * Sheetmetal workflow
 	* including layout (can be CAD or by hand)
 	* cutting (can be waterjet or manual)
