--- a/skills/index.html
+++ b/skills/index.html
@@ -24,18 +24,19 @@ The deliverable for the skills checklist is a page on the course website showing
 * Use of a bandsaw
 * Laser cutting
 	* Screenshots of a CAD model
-	* photos of the laser cutting process
-	* final product produced with a laser cutter
+	* Photos of the laser cutting process
+	* Photo of final product produced with a laser cutter
 * 3D printing
 	* Screenshot of a CAD model
 	* Screenshot of .stl file
 	* Screenshot of 3d printer toolpaths
 	* Photo of a 3d printed component
 * Sheetmetal workflow
-	* including layout (can be CAD or by hand)
-	* cutting (can be waterjet or manual)
-	* deburring and post-processing
-	* assembly
+	* Photo or screenshot of layout (can be CAD or by hand)
+	* Photo of cutting process (can be waterjet or manual)
+	* Photos of deburring and post-processing steps
+	* Photo of assembled box
+* Screenshot of CAD assembly modeled that includes parts you've modeled mated with external geometry such as hardware from McMaster-Carr
 
 </xmp>
 
