--- a/skills/index.html
+++ b/skills/index.html
@@ -38,6 +38,14 @@ The deliverable for the skills checklist is a page on the course website showing
 	* Photo of assembled box
 * Screenshot of CAD assembly modeled that includes parts you've modeled mated with external geometry such as hardware from McMaster-Carr
 
+Please do satisfy multiple requirements in one step when possible, and label accordingly (eg. CAD assembly model shown in 3d printing exercise, etc.)
+
+### Resources:
+
+**CAD:** We are planning to support two CAD platforms, [Fusion 360](https://www.autodesk.com/products/fusion-360/overview) by Autodesk, and [Solidworks](https://www.solidworks.com/) by Dassault Systemes. 
+
+If you have never used CAD before or you do not run Windows on your primary computer, Fusion 360 is probably the place to start. The first step will be to create an [education account](https://www.autodesk.com/education/students), then follow the install instructions. In addition to supporting Windows and MacOS, Fusion has the advantage of being cloud-based, so collaboration is more streamlined. Fusion 360 has a large and active [user community](https://forums.autodesk.com/t5/fusion-360/ct-p/1234), and many [official tutorials](https://help.autodesk.com/view/fusion360/ENU/courses/#3d-modeling), such as this [_creating a sheet metal component_](https://help.autodesk.com/view/fusion360/ENU/courses/AP-CREATING-SHEET-METAL-COMPONENT) tutorial that you may find helpful.
+
 </xmp>
 
 <script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
