--- a/skills/index.html
+++ b/skills/index.html
@@ -46,9 +46,9 @@ Please do satisfy multiple requirements in one step when possible, and label acc
 
 If you have never used CAD before or you do not run Windows on your primary computer, Fusion 360 is probably the place to start. The first step will be to create an [education account](https://www.autodesk.com/education/students), then follow the install instructions. In addition to supporting Windows and MacOS, Fusion has the advantage of being cloud-based, so collaboration is more streamlined. Fusion 360 has a large and active [user community](https://forums.autodesk.com/t5/fusion-360/ct-p/1234), and many [official tutorials](https://help.autodesk.com/view/fusion360/ENU/courses/#3d-modeling), such as this [_creating a sheet metal component_](https://help.autodesk.com/view/fusion360/ENU/courses/AP-CREATING-SHEET-METAL-COMPONENT) tutorial that you may find helpful. There are also numerous unofficial tutorials and learning resources available, such as this [YouTube Channel](https://www.youtube.com/channel/UCo29kn3d9ziFUZGZ50VKvWA).
 
-Solidworks is oriented more towards professional engineering applications, whereas Fusion 360 aims to be accessible to hobbyists, though the learning curves are not too different. Learning Solidworks will be a great investment of time if you think your professional work in the future might require it, in which case you can install the [student version from MIT IS&amp;T](https://ist.mit.edu/solidworks/2021/student), and if you already use Solidworks you are welcome to continue using it for the class. Once you have Solidworks installed, you can access a fairly comprehensive set of built-in tutorials through the help menu.
+Solidworks is oriented more towards professional engineering applications, whereas Fusion 360 aims to be accessible to hobbyists, though the learning curves are not too different. Learning Solidworks will be a great investment of time if you think your professional work in the future might require it, in which case you can install the [student version from MIT IS&amp;T](https://ist.mit.edu/solidworks/2021/student), and if you already use Solidworks you are welcome to continue using it for the class. Once you have Solidworks installed, you can access a fairly comprehensive set of [built-in tutorials](./solidworks-tutorials.jpg) through the help menu.
 
-
+**Make a box:** 
 
 </xmp>
 
