--- a/skills/index.html
+++ b/skills/index.html
@@ -48,7 +48,7 @@ If you have never used CAD before or you do not run Windows on your primary comp
 
 Solidworks is oriented more towards professional engineering applications, whereas Fusion 360 aims to be accessible to hobbyists, though the learning curves are not too different. Learning Solidworks will be a great investment of time if you think your professional work in the future might require it, in which case you can install the [student version from MIT IS&amp;T](https://ist.mit.edu/solidworks/2021/student), and if you already use Solidworks you are welcome to continue using it for the class. Once you have Solidworks installed, you can access a fairly comprehensive set of [built-in tutorials](./solidworks-tutorials.jpg) through the help menu.
 
-**Make a box:** 
+**Make a box:** If you wish, feel free to start your laser cut box exercise using either [MakerCase](https://en.makercase.com/#/) or [make a box.io](https://makeabox.io/), both of which can generate a drawing that can be used to laser cut a box. It's not necessary, strictly speaking, to model a box in 3d and CAD and then create a drawing, at this point, though that is a valuable exercise if you haven't done it before. If you do choose to use files from either of these websites as a starting point, though, please customize the box in some way (add your initials?) before sending it to the laser cutter.
 
 </xmp>
 
