--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Nathan's Documentation for 22.03</title>
+<title>22.03/3.0061[J] Index</title>
 
 <xmp theme="journal" style="display:none;">
 
@@ -15,12 +15,18 @@
 	</menu> -->
 </topbar>
 
-## Resources
+### Resources
 [Web development resources](./web.html)
 
 [Annotated 'weekly update' demo page](./week-annotate/index.html) 
 
-## Students 
+[Skills Checklist](./skills/index.html)
+
+[CAD information](./skills/index.html#resources)
+
+
+
+### Students 
 
 * [Armando](https://aamartz.github.io/prototyping-portfolio/)
 * [Calvin](https://calvinjc01.github.io/rapid-prototyping/)
