--- a/skills/index.html
+++ b/skills/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>22.03/3.0061[J] - Intro to Design Thinking and Rapid Prototyping</title>
+<title>22.03/3.0061[J] Skills Checklist</title>
 
 <xmp theme="journal" style="display:none;">
 
 <topbar style="display:none;">
 	<item><a href="../index.html">Home</a></item>
-	<item><a href="../about.html">About</a></item>
+<!--	<item><a href="../about.html">About</a></item> -->
 </topbar>
 
 <!-- This is a comment, it is ignored by the compiler/interpreter -->
