--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <topbar style="display:none;">
 	<item><a href="./index.html">Home</a></item>
-	<item><a href="./about.html">About</a></item>
+<!--	<item><a href="../about.html">About</a></item> -->
 	<!-- <menu name="Updates">
 		<item><a href="../week-1/index.html">Week 1</a></item>
 		<item><a href="../week-2/index.html">Week 2</a></item>
