--- a/about.html
+++ b/about.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-<title>Nathan's Documentation for 22.03</title>
+<title>22.03/3.0061[J] Index </title>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div style="align-items: left; justify-content:left;" class="container-fluid">
+    <h3> 22.03/3.0061[J]</h3>
+    <div class="navbar-nav">
+      <a class="nav-link active" href="./index.html">Home</a>
+      <a class="nav-link" href="./about.html">About</a>
+    </div>
+  </div>
+</nav>
+
 
 <xmp theme="journal" style="display:none;">
-
-<topbar style="display:none;">
-	<item><a href="./index.html">Home</a></item>
-	<item><a href="./about.html">About</a></item>
-</topbar>
 
 
 # About Me
@@ -16,9 +24,9 @@ Here is a paragraph about me and my interests, as well as a photo.
 
 ![alternate text: image of me](./me.jpg)
 
-
 </xmp>
 
 <script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/joedf/strapdown-topbar@latest/assets/strapdown/strapdown-topbar.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
+<link rel="stylesheet" href="custom.css">
 </html>
