--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
-<title>22.03/3.0061[J] Index</title>
+<title>22.03/3.0061[J] Index </title>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div style="align-items: left; justify-content:left;" class="container-fluid">
+    <h3> 22.03/3.0061[J]</h3>
+    <div class="navbar-nav">
+      <a class="nav-link active" href="./index.html">Home</a>
+      <a class="nav-link" href="./about.html">About</a>
+    </div>
+  </div>
+</nav>
+
 
 <xmp theme="journal" style="display:none;">
 
-<topbar style="display:none;">
-	<item><a href="./index.html">Home</a></item>
-<!--	<item><a href="../about.html">About</a></item> -->
-	<!-- <menu name="Updates">
-		<item><a href="../week-1/index.html">Week 1</a></item>
-		<item><a href="../week-2/index.html">Week 2</a></item>
-		<item></item> 
-		<item><a href="#">Final Project</a></item>
-	</menu> -->
-</topbar>
-
 ### Resources
+
 [Web development resources](./web.html)
 
 [Annotated 'weekly update' demo page](./week-annotate/index.html) 
@@ -48,5 +51,6 @@
 </xmp>
 
 <script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/joedf/strapdown-topbar@latest/assets/strapdown/strapdown-topbar.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
+<link rel="stylesheet" href="custom.css">
 </html>
