--- a/web.html
+++ b/web.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <title>22.03/3.0061[J] - Intro to Design Thinking and Rapid Prototyping</title>
 
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"> 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div style="align-items: left; justify-content:left;" class="container-fluid">
+    <h3> 22.03/3.0061[J]</h3>
+    <div class="navbar-nav">
+      <a class="nav-link active" href="./index.html">Home</a>
+      <a class="nav-link" href="./about.html">About</a>
+    </div>
+  </div>
+</nav>
+
 
 <xmp theme="journal" style="display:none;">
-
-<topbar style="display:none;">
-	<item><a href="../index.html">Home</a></item>
-	<item><a href="../about.html">About</a></item>
-</topbar>
-
-
 ### Markdown 
 
 Markdown is a text-to-HTML conversion tool for web writers. Markdown allows you to write using an easy-to-read, easy-to-write plain text format, then convert it to valid HTML.
@@ -25,7 +28,7 @@ Markdown is a text-to-HTML conversion tool for web writers. Markdown allows you 
 
 Markdown is often used in _static site generator_ platforms like Jekyll or Hugo. The downside to these platforms is that you have to install their software, and then use command line tools to locally build (i.e. convert to HTML) your site before you push it to the web. 
 
-This page is created using a library called [https://strapdownjs.com](strapdown.js). The advantage of Strapdown is that it converts MD to HTML on the fly, so we don't need to do anything in command line. All we have to do is wrap the Markdown text in `<xmp>` tags add a reference to the library on any page we want to convert:
+This page is created using a library called [Strapdown](strapdown.js). The advantage of Strapdown is that it converts MD to HTML on the fly, so we don't need to do anything in command line. All we have to do is wrap the Markdown text in `<xmp>` tags add a reference to the library on any page we want to convert:
 
 `<script src="https://strapdownjs.com/v/0.2/strapdown.js"> </script>`
 
@@ -52,7 +55,7 @@ Sometimes, we'll want to make small changes to a theme (font size, colors, margi
 
 You can easily add a Bootstrap layout to a Strapdown page. Below is a minimal example from [w3schools](https://www.w3schools.com/bootstrap5/bootstrap_get_started.php). (Note that inside of the Bootstrap structure, we need to use HTML tags instead of writing MD. This is because the Bootstrap formatting gets applied before Strapdown converts MD to HTML). 
 
-<div class="container mt-5">
+<div class="container">
   <div class="row">
     <div class="col-sm-4">
       <h3>Column 1</h3>
@@ -121,7 +124,9 @@ That ought to render like we'd expect.
 
 </xmp>
 
+
 <script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/joedf/strapdown-topbar@latest/assets/strapdown/strapdown-topbar.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 <link rel="stylesheet" href="custom.css">
+
 </html>
