--- a/week-annotate/index.html
+++ b/week-annotate/index.html
@@ -162,6 +162,8 @@ For example, resizing images:
 
 YouTube videos can be embedded by clicking "copy embed code" and pasting an iframe element in the file, like this: 
 
+`<iframe width="600" height="400" src="https://www.youtube.com/embed/LewVEF2B_pM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`
+
 <iframe width="600" height="400" src="https://www.youtube.com/embed/LewVEF2B_pM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
