--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 * [Louise](https://landerfaas.github.io/rapid-prototyping/index.html)
 * [Lucas](https://lmarden.github.io/rapid-prototyping/)
 * [Lucy](http://snarcanine.github.io/22.03/index.html)
-* [Pablo](https://pabloarroyo2002.github.io/Rapid-Prototyping_22.03/)
+* [Pablo](https://pabloarroyo2002.github.io/Rapid_Prototyping-_2203/)
 * [Zangi](https://szangi.github.io/intro-to-design/)
 
 
