--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
 <xmp theme="journal" style="display:none;">
 
+### Project Summary 12/20/21 
+
+[Summary Page](./summary.html)
+
 ### Resources
 
 [Web development resources](./web.html)
