--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ Here is a paragraph about me and my interests, as well as a photo.
 
 </xmp>
 
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="../../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 <link rel="stylesheet" href="custom.css">
 </html>
