--- a/summary.html
+++ b/summary.html
@@ -129,7 +129,7 @@ Taking the prototype outside and measuring it with a thermal camera would help t
 
 </xmp>
 
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="../../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 <link rel="stylesheet" href="custom.css">
 </html>
