--- a/web.html
+++ b/web.html
@@ -125,7 +125,7 @@ That ought to render like we'd expect.
 </xmp>
 
 
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="../../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 <link rel="stylesheet" href="custom.css">
 
