--- a/week-1/index.html
+++ b/week-1/index.html
@@ -38,6 +38,6 @@ Here is a list:
 
 </xmp>
 
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="../../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/joedf/strapdown-topbar@latest/assets/strapdown/strapdown-topbar.min.js"></script>
 </html>
