--- a/week-annotate/index.html
+++ b/week-annotate/index.html
@@ -171,6 +171,6 @@ YouTube videos can be embedded by clicking "copy embed code" and pasting an ifra
 
 </xmp>
 
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="../../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/joedf/strapdown-topbar@latest/assets/strapdown/strapdown-topbar.min.js"></script>
 </html>
