--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div style="align-items: left; justify-content:left;" class="container-fluid">
     <h3> 22.03/3.0061[J]</h3>
     <div class="navbar-nav">
@@ -13,15 +13,21 @@
     </div>
   </div>
 </nav>
+ -->
 
+<div class="navbar navbar-fixed-top" style="z-index: -1;"></div>
+<div id="header">
+    <iframe src="./header.html"  style="border: none;" width="100%" height="180px;" scrolling="no" ></iframe>
+</div>
 
-<xmp theme="journal" style="display:none;">
+<xmp style="display:none;">
 
-### Project Summary 12/20/21 
+### Introduction to Design Thinking and Rapid Prototyping 
 
-[Summary Page](./summary.html)
 
 ### Resources
+
+[Fall 2021 Summary Page](./summary.html)
 
 [Web development resources](./web.html)
 
@@ -32,8 +38,10 @@
 [CAD information](./skills/index.html#resources)
 
 
-
 ### Students 
+
+
+### Prior Students (2021)
 
 * [Calvin](https://calvinjc01.github.io/rapid-prototyping/)
 * [David](https://dtxiong.github.io/rapid-prototyping/)
@@ -51,7 +59,7 @@
 
 </xmp>
 
-<script src="../../lab/js/strapdown.js"></script>
+<script src="../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 <link rel="stylesheet" href="custom.css">
 </html>
