--- a/web.html
+++ b/web.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-<title>22.03/3.0061[J] - Intro to Design Thinking and Rapid Prototyping</title>
+<title>22.03/3.0061[J] Index </title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div style="align-items: left; justify-content:left;" class="container-fluid">
-    <h3> 22.03/3.0061[J]</h3>
-    <div class="navbar-nav">
-      <a class="nav-link active" href="./index.html">Home</a>
-      <a class="nav-link" href="./about.html">About</a>
-    </div>
-  </div>
-</nav>
+<div class="navbar navbar-fixed-top" style="z-index: -1;"></div>
+<div id="header">
+    <iframe src="./header.html"  style="border: none;" width="100%" height="75px;" scrolling="no" ></iframe>
+</div>
 
 
-<xmp theme="journal" style="display:none;">
+<xmp style="display:none;">
+  
 ### Markdown 
 
 Markdown is a text-to-HTML conversion tool for web writers. Markdown allows you to write using an easy-to-read, easy-to-write plain text format, then convert it to valid HTML.
@@ -125,7 +119,7 @@ That ought to render like we'd expect.
 </xmp>
 
 
-<script src="../../lab/js/strapdown.js"></script>
+<script src="../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 <link rel="stylesheet" href="custom.css">
 
