--- a/about.html
+++ b/about.html
@@ -4,21 +4,15 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div style="align-items: left; justify-content:left;" class="container-fluid">
-    <h3> 22.03/3.0061[J]</h3>
-    <div class="navbar-nav">
-      <a class="nav-link active" href="./index.html">Home</a>
-      <a class="nav-link" href="./about.html">About</a>
-    </div>
-  </div>
-</nav>
+<div class="navbar navbar-fixed-top" style="z-index: -1;"></div>
+<div id="header">
+    <iframe src="./header.html"  style="border: none;" width="100%" height="75px;" scrolling="no" ></iframe>
+</div>
 
 
-<xmp theme="journal" style="display:none;">
+<xmp style="display:none;">
 
-
-# About Me
+## About Me
 
 Here is a paragraph about me and my interests, as well as a photo.  
 
@@ -26,7 +20,7 @@ Here is a paragraph about me and my interests, as well as a photo.
 
 </xmp>
 
-<script src="../../lab/js/strapdown.js"></script>
+<script src="../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 <link rel="stylesheet" href="custom.css">
 </html>
