--- a/header.html
+++ b/header.html
@@ -2,37 +2,24 @@
 <html class="no-js" lang="en">
 <head>	
 	<base target="_parent">	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<link href="./custom.css" rel="stylesheet">
-
-<div class="trow">
-	<div class="small-12 medium-12 large-12 small-centered columns">
-		<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-2 inline-list-custom">
-
-			<li>
-				<header>
-					<h1><a href="./index.html">22.03/3.0061: <span style="color: #e33434">Introduction to Design Thinking <br> & Rapid Prototyping </span></a></h1>
-					<!-- <h2><a href="./index.html">Tues & Thurs 3:00 - 4:15 SC 102</a></h2> -->
-				</header>
-			</li>
-
-			<li>
-				<nav>
-					<ul class="inline-list-custom">
-						<li><a href="./index.html">Home</a></li>
-						<li><a href="./about.html">About</a></li>
-					</ul>
-				</nav>
-			</li>
-
-		</ul>
-	</div>
-</div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="./index.html">22.03/3.0061[J]</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./about.html">About</a></li>
+    </ul>
+  </div>
+</nav>
 
 </body>
 </html>
