--- a/summary.html
+++ b/summary.html
@@ -6,11 +6,11 @@
 
 <div class="navbar navbar-fixed-top" style="z-index: -1;"></div>
 <div id="header">
-    <iframe src="./header.html"  style="border: none;" width="100%" height="180px;" scrolling="no" ></iframe>
+    <iframe src="./header.html"  style="border: none;" width="100%" height="75px;" scrolling="no" ></iframe>
 </div>
 
 
-<xmp theme="journal" style="display:none;">
+<xmp style="display:none;">
 
 ## Project Summary (Fall 2021)
 
@@ -124,7 +124,7 @@ Taking the prototype outside and measuring it with a thermal camera would help t
 
 </xmp>
 
-<script src="../../lab/js/strapdown.js"></script>
+<script src="../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 <link rel="stylesheet" href="custom.css">
 </html>
