--- a/skills/index.html
+++ b/skills/index.html
@@ -52,6 +52,6 @@ Solidworks is oriented more towards professional engineering applications, where
 
 </xmp>
 
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="../../lab/js/strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/joedf/strapdown-topbar@latest/assets/strapdown/strapdown-topbar.min.js"></script>
 </html>
