--- a/header.html
+++ b/header.html
@@ -16,6 +16,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="./index.html">Home</a></li>
+      <li><a href="./2021/index.html">2021</a></li>
       <li><a href="./about.html">About</a></li>
     </ul>
   </div>
