--- a/week-1/index.html
+++ b/week-1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Nathan's Documentation for 22.03</title>
+<title>Example Documentation for 22.03</title>
 
 <xmp theme="journal" style="display:none;">
 
@@ -39,5 +39,5 @@ Here is a list:
 </xmp>
 
 <script src="../../lab/js/strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/joedf/strapdown-topbar@latest/assets/strapdown/strapdown-topbar.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </html>
