--- a/week-annotate/index.html
+++ b/week-annotate/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<title>22.03/3.0061[J] - Intro to Design Thinking and Rapid Prototyping</title>
+<title>22.03/3.0061[J] Weekly update page with annontations </title>
 
-<xmp theme="journal" style="display:none;">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<topbar style="display:none;">
-	<item><a href="../index.html">Home</a></item>
-	<item><a href="../about.html">About</a></item>
-</topbar>
+<div class="navbar navbar-fixed-top" style="z-index: -1;"></div>
+<div id="header">
+    <iframe src="../header.html"  style="border: none;" width="100%" height="75px;" scrolling="no" ></iframe>
+</div>
+
+
+<xmp style="display:none;">
 
 <!-- This is a comment, it is ignored by the compiler/interpreter -->
 ### Page Title and Navigation:
