--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 [Web development resources](./web.html)
 
-[Annotated 'weekly update' demo page](./week-annotate/index.html) 
+['Weekly update' demo page](./week-1/index.html)
+
+['Weekly update' demo page, annotated](./week-annotate/index.html) 
 
 
 
