--- a/week-1/index.html
+++ b/week-1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>Example Documentation for 22.03 </title>
+<title>Example documentation for 22.03 </title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <div class="navbar navbar-fixed-top" style="z-index: -1;"></div>
 <div id="header">
-    <iframe src="./header.html"  style="border: none;" width="100%" height="75px;" scrolling="no" ></iframe>
+    <iframe src="../header.html"  style="border: none;" width="100%" height="75px;" scrolling="no" ></iframe>
 </div>
 
 
