--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 ### Resources
 
+## Web development
+
 [Web development resources](./web.html)
 
 ['Weekly update' demo page](./week-1/index.html)
 
 ['Weekly update' demo page, annotated](./week-annotate/index.html) 
 
+## Lectures
 
+[Lecture 1, September 7, 2022](./lecture-1/index.html)
 
 ### Students 
 
