--- a/lecture-1/index.html
+++ b/lecture-1/index.html
@@ -17,6 +17,31 @@
 
 [Lecture slides](https://docs.google.com/presentation/d/1wtMVNsDoVZtDwXzu4onv6nGHJvfd56p6L4uLYCsU9i4/present?usp=sharing)
 
+## Some links
+
+# Hand grinding paraboloid mirrors:
+
+[Hand mirror grinding](http://www.thomasjacquin.com/build-your-own-telescope-mirror/)
+
+[Amateur Telescope Making](https://stellafane.org/tm/atm/mirror-refs/strokes.html)
+
+[Stockton Astronomical Society](http://www.jeffbaldwin.org/atm.htm)
+
+# Spin casting epoxy mirrors:
+
+[Recent developments in the production of spin-cast epoxy mirrors](https://www-spiedigitallibrary-org.libproxy.mit.edu/conference-proceedings-of-spie/8971/1/Recent-developments-in-the-production-of-spin-cast-epoxy-mirrors/10.1117/12.2044612.full?SSO=1)
+
+[A method for manufacturing parabolic mirrors](https://www.sciencedirect.com/science/article/abs/pii/0038092X57901305?fr=RR-2&ref=pdf_download&rr=74706d90fff8c454)
+
+[Spin-Cast Polymer Mirrors](http://mobilesolarinitiative.org/Word%20and%20PDF%20Docs/11%2003%2017%20Spin%20Cast%20Polymer%20Mirrors.pdf)
+
+# Commercial solar cookers to test:
+
+[LiFuJunDong 1800W Concentrating Solar Cooker](https://www.amazon.com/gp/product/B082PTPRNM/)
+
+[All Season Solar Cooker Camper](https://www.amazon.com/gp/product/B08HSGFH59/)
+
+[GOSUN Solar Oven Portable Stove](https://www.amazon.com/gp/product/B07CJP52D6/)
 
 
 
