--- a/lecture-1/index.html
+++ b/lecture-1/index.html
@@ -19,7 +19,7 @@
 
 ## Some links
 
-# Hand grinding paraboloid mirrors:
+### Hand grinding paraboloid mirrors:
 
 [Hand mirror grinding](http://www.thomasjacquin.com/build-your-own-telescope-mirror/)
 
@@ -27,7 +27,7 @@
 
 [Stockton Astronomical Society](http://www.jeffbaldwin.org/atm.htm)
 
-# Spin casting epoxy mirrors:
+### Spin casting epoxy mirrors:
 
 [Recent developments in the production of spin-cast epoxy mirrors](https://www-spiedigitallibrary-org.libproxy.mit.edu/conference-proceedings-of-spie/8971/1/Recent-developments-in-the-production-of-spin-cast-epoxy-mirrors/10.1117/12.2044612.full?SSO=1)
 
@@ -35,7 +35,7 @@
 
 [Spin-Cast Polymer Mirrors](http://mobilesolarinitiative.org/Word%20and%20PDF%20Docs/11%2003%2017%20Spin%20Cast%20Polymer%20Mirrors.pdf)
 
-# Commercial solar cookers to test:
+### Commercial solar cookers to test:
 
 [LiFuJunDong 1800W Concentrating Solar Cooker](https://www.amazon.com/gp/product/B082PTPRNM/)
 
