--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 ### Resources
 
-## Web development
+#### Web development
 
 [Web development resources](./web.html)
 
@@ -26,7 +26,7 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 ['Weekly update' demo page, annotated](./week-annotate/index.html) 
 
-## Lectures
+#### Lectures
 
 [Lecture 1, September 7, 2022](./lecture-1/index.html)
 
