--- a/header.html
+++ b/header.html
@@ -1,26 +1,19 @@
-<!doctype html>
-<html class="no-js" lang="en">
-<head>	
-	<base target="_parent">	
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<base target="_parent"> 
+<link href="./custom.css" rel="stylesheet">
 </head>
-<body>
+<body style="margin: 0px !important;">
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="./index.html">22.03/3.0061[J]</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./2021/index.html">2021</a></li>
-      <li><a href="./about.html">About</a></li>
-    </ul>
-  </div>
-</nav>
+<div class="topnav">
+  <a href="./index.html">22.03/3.0061[J]</a>
+  <a href="./index.html">Home</a>
+  <a href="./2021/index.html">2021</a>
+  <a href="./about.html">About</a>
+</div>
 
 </body>
 </html>
+
