--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 #### Web development
 
+[GitHub & GH Pages]('../../lab/website/github.html') 
+
+<!-- [HTML & CSS]('../../lab/website/htmlcss.html') -->
+
 [Web development resources](./web.html)
 
 ['Weekly update' demo page](./week-1/index.html)
