--- a/lecture-1/index.html
+++ b/lecture-1/index.html
@@ -11,11 +11,12 @@
 
 
 <xmp style="display:none;">
-
-<!-- This is a comment, it is ignored by the compiler/interpreter -->
+    
 ## Week 1 Slides
 
 [Lecture slides](https://docs.google.com/presentation/d/1wtMVNsDoVZtDwXzu4onv6nGHJvfd56p6L4uLYCsU9i4/present?usp=sharing)
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTJo6TZNSzqRyQTAzamSfTEXjecNJNTiyGTD0BC-Wk0FmaV0dw28T2k4mzhSnIacje2Xl1Mr_A1J83S/embed?start=true&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 ## Some links
 
