--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 #### Web development
 
-[GitHub & GH Pages]('../../lab/website/github.html') 
+[GitHub & GH Pages](../../lab/website/github.html) 
 
 <!-- [HTML & CSS]('../../lab/website/htmlcss.html') -->
 
